Add a description section on the page. Move javascript to a separate index.js file

--- a/index.html
+++ b/index.html
@@ -62,150 +62,20 @@
         width="100%" height="600px" style="width: 100%; height: 600px; max-height: 100vh" frameborder="0"
         allowfullscreen></iframe>
 
-    <script type="module">
-        function randomBigInt(max) {
-            const maxBits = max.toString(2).length;
-            const byteLength = Math.ceil(maxBits / 8);
+    <h2 style="text-align: center; font-style: italic;""> What is this?</h2>
+    <p> This page generates truly random tak positions, using a <a
+            href=" https://en.wikipedia.org/wiki/Bijection">biection</a> between tak position and natural numbers. Each
+        number between 0 and 234953877228339135776421063941057364108851372312359713 maps to a unique position, so a
+        random number in that range represents a random position.
+        </p>
 
-            function getRandomBigInt() {
-                const bytes = new Uint8Array(byteLength);
-                crypto.getRandomValues(bytes); // Uses secure random number generator
-                let result = 0n;
-                for (let byte of bytes) {
-                    result = (result << 8n) + BigInt(byte);
-                }
-                return result;
-            }
+        <p> The math is based on the counting function described in
+            <a href="https://theses.liacs.nl/pdf/LaurensBeljaards2017Tak.pdf">AI agents for the
+                abstract strategy game Tak by Laurens Beljaards </a>, section 4.2.
+        </p>
 
-            let rnd;
-            do {
-                rnd = getRandomBigInt();
-            } while (rnd > max);
-            return rnd;
-        }
+        <script type=" module" src="./index.js"></script>
 
-        // Use ES module import syntax to import functionality from the module
-        // that we have compiled.
-        //
-        // Note that the `default` import is an initialization function which
-        // will "boot" the module and make it ready to use. Currently browsers
-        // don't support natively imported WebAssembly as an ES module, but
-        // eventually the manual initialization won't be required!
-        import init, { PositionGenerator } from './wasm-position-generator/pkg/wasm_position_generator.js';
-
-        let ptnNinjaHasLoaded = false;
-        let tps = "x6/x6/x6/x6/x6/x6 1 1";
-        let positionGenerator;
-
-        async function run() {
-            await init();
-            console.log("Wasm module loaded");
-
-            const startTime = performance.now();
-            positionGenerator = new PositionGenerator();
-
-            console.log(`PositionGenerator initialized in ${performance.now() - startTime} ms`);
-            console.log("legal 6s positions: ", positionGenerator.numLegalPositions(6));
-        }
-
-        run();
-
-        window.addEventListener(
-            "message",
-            (event) => {
-                if (event.source !== ninja.contentWindow) {
-                    return
-                }
-
-                if (!ptnNinjaHasLoaded) {
-                    if (event.data.action === "GAME_STATE") {
-                        ptnNinjaHasLoaded = true;
-                    } else {
-                        return; // Ignore other messages until ptn.ninja is fully loaded
-                    }
-                }
-
-                if (event.data.action === "GAME_STATE") {
-                    const gameState = event.data.value;
-                    tps = gameState.tps;
-                    const n = positionGenerator.encode(tps, 6);
-
-                    console.log("ptn.ninja loaded, tps:", tps);
-                    console.log(`n=${n}`);
-
-                    document.getElementById('numberInput').value = n;
-                } else {
-                    return; // Ignore other messages until ptn.ninja is fully loaded
-                }
-            },
-            false
-        );
-
-        const setNewTps = newTps => {
-            tps = newTps;
-            document.getElementById('tpsInput').value = newTps;
-            console.log("New TPS set:", tps);
-
-            const ninja = document.getElementById("ninja");
-            const newPtn = `[TPS "${tps}"]`;
-            ninja.contentWindow.postMessage({ action: "SET_CURRENT_PTN", value: newPtn }, "*");
-        }
-
-        const randomPositionButton = document.getElementById("randomPositionButton");
-
-        randomPositionButton.addEventListener(
-            "click",
-            (event) => {
-                const max_number = positionGenerator.numLegalPositions(6);
-                const n = randomBigInt(max_number);
-                console.log("Random n:", n.toString());
-                document.getElementById('numberInput').value = n.toString();
-                const newTps = positionGenerator.decode(n, 6);
-                numberInput.classList.remove("input-error");
-                setNewTps(newTps);
-            },
-            true
-        );
-
-        const resetButton = document.getElementById("resetButton");
-
-        resetButton.addEventListener(
-            "click",
-            (event) => {
-                const newTps = "x6/x6/x6/x6/x6/x6 1 1";
-                setNewTps(newTps);
-                document.getElementById('numberInput').value = "0";
-            },
-            true
-        );
-
-        const numberInput = document.getElementById("numberInput");
-
-        numberInput.addEventListener(
-            "input",
-            (event) => {
-                let n;
-                try {
-                    n = BigInt(event.target.value);
-                } catch (error) {
-                    console.warn("Invalid input for number input:", event.target.value);
-                    numberInput.classList.add("input-error");
-                    return;
-                }
-                console.log("Number input changed:", n.toString());
-                let maxN = positionGenerator.numLegalPositions(6);
-                if (n < 0 || n >= maxN) {
-                    console.warn(`Number input out of range [0, ${maxN})`);
-                    numberInput.classList.add("input-error");
-                    return;
-                }
-                numberInput.classList.remove("input-error");
-                const newTps = positionGenerator.decode(n, 6);
-                setNewTps(newTps);
-            },
-            true
-        );
-    </script>
 </body>
 
 </html>
