Update TPS field when doing moves on ptn.ninja. Improve text

--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
         allowfullscreen></iframe>
 
     <h2 style="text-align: center; font-style: italic;""> What is this?</h2>
-    <p> This page generates truly random tak positions, using a <a
-            href=" https://en.wikipedia.org/wiki/Bijection">biection</a> between tak position and natural numbers. Each
-        number between 0 and 234953877228339135776421063941057364108851372312359713 maps to a unique position, so a
-        random number in that range represents a random position.
+    <p> This page implements a <a
+            href=" https://en.wikipedia.org/wiki/Bijection" target="_blank">biection</a> between tak positions and
+        natural numbers, meanings that every
+        number between 0 and 234953877228339135776421063941057364108851372312359713 maps to a unique tak position. This
+        also
+        allows generating truly random tak positions, by generating a random number in that range and converting it to
+        a position.
         </p>
 
         <p> The math is based on the counting function described in
-            <a href="https://theses.liacs.nl/pdf/LaurensBeljaards2017Tak.pdf">AI agents for the
+            <a href="https://theses.liacs.nl/pdf/LaurensBeljaards2017Tak.pdf" target="_blank">AI agents for the
                 abstract strategy game Tak by Laurens Beljaards </a>, section 4.2.
         </p>
 
