--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" />
-    <title>Embed Test</title>
+    <title>Random tak positions</title>
 
     <style media="screen">
         body {
@@ -47,6 +47,7 @@
 </head>
 
 <body>
+    <h1 style="text-align: center;">Random tak position generator</h1>
     <div class="row">
         <form id="tpsForm">
             <input name="tpsInput" id="tpsInput" value="x6/x6/x6/x6/x6/x6 1 1" readonly />
@@ -65,8 +66,8 @@
     <h2 style="text-align: center; font-style: italic;""> What is this?</h2>
     <p> This page implements a <a
             href=" https://en.wikipedia.org/wiki/Bijection" target="_blank">biection</a> between tak positions and
-        natural numbers, meanings that every
-        number between 0 and 234953877228339135776421063941057364108851372312359713 maps to a unique tak position. This
+        natural numbers, meaning that every
+        number between 0 and 234953877228339135776421063941057364108851372312359712 maps to a unique tak position. This
         also
         allows generating truly random tak positions, by generating a random number in that range and converting it to
         a position.
