--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <h2 style="text-align: center; font-style: italic;""> What is this?</h2>
     <p> This page implements a <a
-            href=" https://en.wikipedia.org/wiki/Bijection" target="_blank">biection</a> between tak positions and
+            href=" https://en.wikipedia.org/wiki/Bijection" target="_blank">bijection</a> between tak positions and
         natural numbers, meaning that every
         number between 0 and 234953877228339135776421063941057364108851372312359712 maps to a unique tak position. This
         also
