Clean up hyperlinks

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <p> The math is based on the counting function described in
             <a href="https://theses.liacs.nl/pdf/LaurensBeljaards2017Tak.pdf" target="_blank">AI agents for the
-                abstract strategy game Tak by Laurens Beljaards</a>, section 4.2.
+                abstract strategy game Tak</a> by Laurens Beljaards, section 4.2.
         </p>
 
         <script type="module" src="./index.js"></script>
