Make the tps field editable, and update the ptn ninja embed on every keystroke if the tps is valid

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1 style="text-align: center;">Random tak position generator</h1>
     <div class="row">
         <form id="tpsForm">
-            <input name="tpsInput" id="tpsInput" value="x6/x6/x6/x6/x6/x6 1 1" readonly />
+            <input name="tpsInput" id="tpsInput" value="x6/x6/x6/x6/x6/x6 1 1" />
             <input name="numberInput" id="numberInput" value="0" />
             <div class="row">
                 <input type="reset" id="resetButton" value="Start Position" />
